[package]
name = "omok-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environment = { path = "environment" }
mcts = { path = "mcts" }
network-utils = { path = "network-utils" }
rand = { version = "0.8" }
rayon = { version = "1.7" }
tensorflow = { version = "0.20", features = ["tensorflow_gpu"] }

[workspace]
members = [
    "environment",
    "gui",
    "mcts",
    "network-utils"
]
