[package]
name = "alpha-zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = { version = "0.1" }
bincode = { version = "1" }
bitvec = { version = "1" }
burn = { version = "0.7" }
burn-autodiff = { version = "0.7" }
burn-tch = { version = "0.7" }
environment = { path = "../environment" }
mcts = { path = "../mcts" }
network-utils = { path = "../network-utils" }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
rand = { version = "0.8" }
rayon = { version = "1.7" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }
