[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
atomic_float = { version = "0.1" }
alpha-zero = { path = "../alpha-zero" }
environment = { path = "../environment" }
mcts = { path = "../mcts" }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
rand = { version = "0.8" }
rayon = { version = "1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2.4", features = [] }
tensorflow = "0.21"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
